Fix grid overflow scrolling

--- a/src/components/organisms/GraphEditor/GraphEditor.scss
+++ b/src/components/organisms/GraphEditor/GraphEditor.scss
@@ -43,6 +43,7 @@ $color-gridLine: rgba( $color-brand-primary, 0.2 );
 
 		.graphEditor-graph-grid {
 			flex: 1 0 $dimen-cellSize * 6;
+			width: 0; // Needed for overflow scrolling to work ???
 			background:
 				repeating-linear-gradient(
 					transparent,
